# mipt-cpp-2

./: .gitignore  .gitmodules
exceptions/: 1.cpp
hm1/task1/: CMakeLists.txt
hm1/task2/: CMakeLists.txt
hm1/task3/: CMakeLists.txt  main.cpp
hm1/task3/include/: ans_handler.hpp  my_math.hpp
hm1/task3/src/: ans_handler.cpp  my_math.cpp
lab1/: 0.cpp  1.cpp  2.cpp  3.cpp  b.ipynb
lab2/: 0.cpp  1.cpp  3.cpp
templates/: 1.cpp
